{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Movement",
            "id": "aaa86b39-7ea7-45d2-966b-81cd3cf93928",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "14d9ebbf-270e-423d-a0e0-b702e3d91eef",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "842a5414-7b70-40aa-ab6f-2af436158ae5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "93f89bd8-7bee-4f9d-b565-0eb6cb98af82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "945d843e-0f17-4e4e-b1df-17cc43e28995",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "6e41effd-dcb9-4912-83ea-dbfe04a882d0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8a882639-8fed-4d8e-a871-3e96de1f39a6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "c178f574-caad-49e8-aea5-7a179ae7b002",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e534d527-1683-4263-bb7a-9c9fa7ca400f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "98524ac0-142c-4aca-b338-db41a38fcba2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4a84bd7d-845e-4c34-acf8-322da4802c16",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "379a4abc-3f88-4349-aa34-dd1db332d76e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0f99b203-aec8-42d7-a09a-00122e757731",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "debd1566-5b15-49fd-afb1-29caf59841ac",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78d978f7-a544-415c-b1dd-efcc1ce337f3",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}